# bilbo

./: .gitignore  Pipfile  README-contibuting.md  README.md  azure-pipelines.yml  environment.yml  input_spec_example.yml  main.py  pyproject.toml  requirements.txt  run.py  setup.py  test.ipynb
examples/: .dev_env  DTM_creation.sql  check_for_doublons.ipynb  configFile_management.ipynb  correction_data_sjoin_dask.ipynb  create_indicator.ipynb  create_metadata.ipynb  geodataframe_with_length_condition.ipynb  load_data.ipynb  memory.ipynb  missing_data.ipynb  point.ipynb  polygon.ipynb  polygon.py  polygon_autre_crs.ipynb  polygon_masque_classifie.ipynb  polygon_masque_continue.ipynb  recuperation_data_TMF_GFC_GEE.ipynb  tmp.yaml
gee_raster/: __init__.py  extract.py  setup.py
generate_indicator/: __init__.py  gee.py
notebook_source/: get_data.ipynb
oeilnc_config/: __init__.py  metadata.py  preload_worker.py  settings.py
oeilnc_geoindicator/: __init__.py  calculation.py  distribution.py  gee.py  gee_credentials.json  geometry.py  interpolation.py  raster.py
oeilnc_utils/: __init__.py  catalog.py  connection.py  dataframe.py  file_management.py  geometry.py  raster.py
parquet/: voronoi.parquet  voronoid.parquet
source/: test.ipynb
test/: data_reference.yaml  h3.yaml  test_create_indicator.py  test_meta_indicateurSpec.yaml  test_meta_individuStatSpec.yaml  test_metadata.py  test_metadata_injection.py  test_worker.py
test_catalog_file/: bilbo_data.yaml  data_reference.yaml  h3.yaml
test_catalog_file/config/: H3_6_NC.yaml  KBA.yaml  observation_nidification.yaml  test_GEE.yaml
utils/: __init__.py  connection.py
